--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
     "presets": [
-        "es2015",
-        "transform-runtime"
+        "es2015"
     ]
+    // "plugins": ["transform-runtime"]
 }
